--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,101 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  <a class="navbar-brand" href="#">Navbar</a>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <span class="navbar-brand">
+    <img src="/assets/images/stamp.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Mandaten.nl Gebruikers Demo
+  </span>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Energie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Banken</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a class="nav-link" href="#">Telecom</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 
 <div class="container">
-
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML
-      document.</p>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <h4 class="alert-heading">Welkom bij Mandaten.nl</h4>
+    <p><em>De</em> plek om al je mandaten beheren! Selecteer hierboven in de menu-balk de branch waar je jouw mandaten van wil
+      inzien.
+    </p>
   </div>
+
+  <div class="card mb-2">
+    <div class="card-block">
+      <h3 class="card-title">De energie-sector</h3>
+
+      <ul class="nav nav-pills mb-2">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Energie Leverancier</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item active" href="#">Eneco</a>
+            <a class="dropdown-item" href="#">Nuon</a>
+            <a class="dropdown-item" href="#">Essent</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Greenchoice</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Netbeheerder</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Stedin</a>
+            <a class="dropdown-item" href="#">Enexis</a>
+            <a class="dropdown-item" href="#">Alliander</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+
+  <div class="card">
+    <div class="card-block">
+      <h4 class="card-title">Mandaten gegeven aan energie-leverancier Eneco</h4>
+    </div>
+    <div class="list-group list-group-flush">
+      <div class="list-group-item flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-0">Leveranciersovereenkomst</h5>
+          <button class="btn btn-sm btn-danger">Trek mandaat in</button>
+        </div>
+        <small>Actief sinds 02-01-2015</small>
+        <p class="mt-2 mb-0">Korte uitleg met bla bla.</p>
+        <button class="btn btn-sm btn-primary">Download de PDF</button>
+      </div>
+      <div class="list-group-item flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-0">P4 Inzicht overeenkomst</h5>
+          <button class="btn btn-sm btn-danger">Trek mandaat in</button>
+        </div>
+        <small>Actief sinds 02-01-2015</small>
+        <p class="mt-2 mb-0">Korte uitleg met bla bla.</p>
+        <button class="btn btn-sm btn-primary">Download de PDF</button>
+      </div>
+      <div class="list-group-item flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-0">P1 inzicht overeenkomst</h5>
+          <button class="btn btn-sm btn-danger">Trek mandaat in</button>
+        </div>
+        <small>Actief sinds 02-01-2015</small>
+        <p class="mt-2 mb-0">Korte uitleg met bla bla.</p>
+        <button class="btn btn-sm btn-primary">Download de PDF</button>
+      </div>
+    </div>
+  </div>
+
+
 
 </div>
 <!-- /.container -->
